--- a/app/index.css
+++ b/app/index.css
@@ -505,15 +505,12 @@
     }
 
     @media (max-width: 480px) {
-        .mobile-height-100pc {
-            height: 100%;
-        }
 
-        .mobile-width-320px {
+        .-mobile-width-320px {
             width: 320px;
         }
 
-        .mobile-width-100pc {
+        .-mobile-width-100pct {
             width: 100%;
         }
     }
