--- a/app/index.css
+++ b/app/index.css
@@ -374,6 +374,10 @@
         padding-right: 10px;
     }
 
+    .padding-top-50px {
+        padding-top: 50px;
+    }
+
     .padding-x-5px {
         padding: 0 5px;
     }
