--- a/app/cdn/css/gg.css
+++ b/app/cdn/css/gg.css
@@ -142,3 +142,146 @@
         transform: rotate(-45deg)
     }
 }
+
+@media screen {
+    .gg-file-document {
+        box-sizing: border-box;
+        position: relative;
+        display: block;
+        transform: scale(var(--ggs,1));
+        width: 14px;
+        height: 16px;
+        border: 2px solid transparent;
+        border-right: 0;
+        border-top: 0;
+        box-shadow: 0 0 0 2px;
+        border-radius: 1px;
+        border-top-right-radius: 4px;
+        overflow: hidden
+    }
+
+    .gg-file-document::after, .gg-file-document::before {
+        content: "";
+        display: block;
+        box-sizing: border-box;
+        position: absolute
+    }
+
+    .gg-file-document::before {
+        background: currentColor;
+        box-shadow: 0 4px 0, -6px -4px 0;
+        left: 0;
+        width: 10px;
+        height: 2px;
+        top: 8px
+    }
+
+    .gg-file-document::after {
+        width: 6px;
+        height: 6px;
+        border-left: 2px solid;
+        border-bottom: 2px solid;
+        right: -1px;
+        top: -1px
+    }
+}
+
+@media screen {
+    .gg-film, .gg-film::after {
+        display: block;
+        box-sizing: border-box;
+        border-radius: 3px
+    }
+
+    .gg-film {
+        border: 2px solid;
+        position: relative;
+        transform: scale(var(--ggs,1));
+        width: 22px;
+        height: 18px
+    }
+
+    .gg-film::after {
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 2px;
+        background: currentColor;
+        left: 2px;
+        top: 2px;
+        box-shadow: 0 4px 0, 0 8px 0, 12px 0 0, 12px 4px 0, 12px 8px 0
+    }
+}
+
+@media screen {
+    .gg-image {
+        box-sizing: border-box;
+        position: relative;
+        display: block;
+        transform: scale(var(--ggs,1));
+        width: 20px;
+        height: 16px;
+        overflow: hidden;
+        box-shadow: 0 0 0 2px;
+        border-radius: 2px
+    }
+
+    .gg-image::after, .gg-image::before {
+        content: "";
+        display: block;
+        box-sizing: border-box;
+        position: absolute;
+        border: 2px solid
+    }
+
+    .gg-image::after {
+        transform: rotate(45deg);
+        border-radius: 3px;
+        width: 16px;
+        height: 16px;
+        top: 9px;
+        left: 6px
+    }
+
+    .gg-image::before {
+        width: 6px;
+        height: 6px;
+        border-radius: 100%;
+        top: 2px;
+        left: 2px
+    }
+}
+
+@media screen {
+    .gg-music, .gg-music::after, .gg-music::before {
+        display: block;
+        box-sizing: border-box;
+        border: 2px solid
+    }
+
+    .gg-music {
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        border-bottom: 0;
+        margin-top: -4px;
+        position: relative;
+        transform: skewY(-15deg) scale(var(--ggs,1));
+        width: 14px;
+        height: 16px
+    }
+
+    .gg-music::after, .gg-music::before {
+        content: "";
+        position: absolute;
+        width: 7px;
+        height: 7px;
+        top: 9px;
+        left: -7px;
+        transform: skewY(15deg);
+        border-radius: 10px
+    }
+
+    .gg-music::after {
+        left: 5px
+    }
+}
