--- a/app/index.css
+++ b/app/index.css
@@ -370,6 +370,10 @@
         padding-left: 10px;
     }
 
+    .padding-left-50px {
+        padding-left: 50px;
+    }
+
     .padding-right-10px {
         padding-right: 10px;
     }
