--- a/app/index.css
+++ b/app/index.css
@@ -30,6 +30,7 @@
     blocks, block, box, card {
         display: flex;
         display: webkit-flex;
+        flex-direction: column;
         position: relative;
     }
 
